--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <img src="/img/schoolhouse.svg" alt="nodeschool logo">
+        <img src="img/schoolhouse.svg" alt="nodeschool logo">
         <h1 class="name">nodeschool philadelphia</h1>
         <p class="subtitle">Philadelphia chapter of <a class="big-link" href="http://nodeschool.io/" target="_blank">NodeSchool</a>. Open source workshops that teach web software skills.</p>
         <nav role="navigation">
