--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav role="navigation">
           <ul class="nav">
             <li><a href="http://nodeschool.io/" target="_blank">Nodeschool Homepage</a></li>
-            <li><a href="http://nodeschool.io/" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/nodeschool/philadelphia" target="_blank">GitHub</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="http://nodeschool.io/#workshoppers" target="_blank">Workshoppers</a></li>
@@ -58,7 +58,7 @@
         <div class="full">
           <h2 class="big-heading">About</h2>
           <p>NodeSchool is decentralized, open source and volunteer run. These are free in-person hosted workshops in which workshoppers are used as curriculum and mentors help attendees work through the challenges. For more about NodeSchool in general we recommend you visit the <a href="http://nodeschool.io/" target="_blank">NodeSchool Homepage</a>.</p>
-          <p>We are dedicated to providing a welcoming community for everyone. Please read our <a href="https://github.com/nodeschool/philadelphia/blob/master/codeofconduct.md" target="_blank"> Code of Conduct</a>.</p>
+          <p>We are dedicated to providing a welcoming community for everyone. Please read our <a href="https://github.com/nodeschool/philadelphia/blob/master/code-of-conduct.md" target="_blank"> Code of Conduct</a>.</p>
         </div>
       </div>
     </section>
